objects/cspmb__Add_On_Price_Item__c.object
<CustomObject>
    <description>Describes a simple product, bolt-on, optional extra etc. which can be sold associated with a parent Commercial Product.</description>
    <fields>
        <fullName>CSCRM_Migration_Id__c</fullName>
        <description>Used as an external id for migrating the data from org to an org (easing up the deployments).</description>
        <externalId>true</externalId>
        <inlineHelpText>Used as an external id for migrating the data from org to an org (easing up the deployments).</inlineHelpText>
        <label>CSCRM Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Taifun_Product_Element_ID__c</fullName>
        <label>Taifun Product Element ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Add_On_Name_English__c</fullName>
        <description>A value to display on documents</description>
        <inlineHelpText>A value to display on documents</inlineHelpText>
        <label>Add On Name English</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Add_On_Name_French__c</fullName>
        <description>The name of the add on, translated into French</description>
        <inlineHelpText>The name of the add on, translated into French</inlineHelpText>
        <label>Add On Name French</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Add_On_Name_German__c</fullName>
        <description>The German language name of the Add On</description>
        <inlineHelpText>The German language name of the Add On</inlineHelpText>
        <label>Add On Name German</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Add_On_Name_Italian__c</fullName>
        <description>The name of the add on, translated into Italian</description>
        <inlineHelpText>The name of the add on, translated into Italian</inlineHelpText>
        <label>Add On Name Italian</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Addon_Abbreviation__c</fullName>
        <label>Addon Abbreviation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Image__c</fullName>
        <description>Name of the static resource on the org.</description>
        <label>Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_OE_Type__c</fullName>
        <description>Type of the OE to be displayed (currently only used in DigiPhone)</description>
        <label>OE Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Block 10</fullName>
                </value>
                <value>
                    <fullName>Block 100</fullName>
                </value>
                <value>
                    <fullName>Analog</fullName>
                </value>
                <value>
                    <fullName>MSN</fullName>
                </value>
                <value>
                    <fullName>New Number</fullName>
                </value>
                <value>
                    <fullName>Call Forwarding</fullName>
                </value>
                <value>
                    <fullName>New Number Code Required</fullName>
                </value>
                <value>
                    <fullName>CLIP Number</fullName>
                </value>
                <value>
                    <fullName>Backup Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Requires_Provisioning_Taifun__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does AddOn Requires Provisioning in Taifun</description>
        <inlineHelpText>Does AddOn Requires Provisioning in Taifun</inlineHelpText>
        <label>Requires Provisioning Taifun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_TaifunProductElement_InternalName__c</fullName>
        <description>Stores Taifun provisioning name</description>
        <label>Taifun Product Element Internal Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TaifunProductElement_Number__c</fullName>
        <description>Stores Taifun provisioning number</description>
        <label>Taifun Product Element Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TaifunProductElement_Type__c</fullName>
        <description>Stores Taifun provisioning type</description>
        <label>Taifun Product Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Optional Auto</fullName>
                </value>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Taifun_ProductElement_Parameter__c</fullName>
        <description>Stores Taifun provisioning parameter (if applicable)</description>
        <label>Taifun Product Element Parameter</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Add Ons</relationshipLabel>
        <relationshipName>Add_On_Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Add_On_Price_Item_Code__c</fullName>
        <label>Add On Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Add_On_Price_Item_Description__c</fullName>
        <label>Add On Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Apply_One_Off_Charge_Account_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply One-Off Charge Account Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Apply_Recurring_Charge_Account_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Recurring Charge Account Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Authorization_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization Level</label>
        <referenceTo>cspmb__Authorization_Level__c</referenceTo>
        <relationshipLabel>Add Ons</relationshipLabel>
        <relationshipName>Add_On_Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>36 Months</fullName>
                </value>
                <value>
                    <fullName>48 Months</fullName>
                </value>
                <value>
                    <fullName>60 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Current_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current version of this Add On. If blank, this record is the current version.</description>
        <inlineHelpText>The current version of this Add On. If blank, this record is the current version.</inlineHelpText>
        <label>Current Version</label>
        <referenceTo>cspmb__Add_On_Price_Item__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Negative Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Authorization_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Authorization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_One_Off_Discount_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is One-Off Discount Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Recurring_Discount_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring Discount Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge_Code__c</fullName>
        <label>One-Off Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>One-Off Charge External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge__c</fullName>
        <label>One-Off Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Cost__c</fullName>
        <label>One-Off Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Product_Definition_Name__c</fullName>
        <label>Product Definition Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Product</fullName>
                </value>
                <value>
                    <fullName>Number Details</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Additional Add Ons</fullName>
                </value>
                <value>
                    <fullName>Voice Number Porting</fullName>
                </value>
                <value>
                    <fullName>Voice Additional Numbers</fullName>
                </value>
                <value>
                    <fullName>Voice Special Arrangement</fullName>
                </value>
                <value>
                    <fullName>Voice Backup Number</fullName>
                </value>
                <value>
                    <fullName>Voice Support &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Voice Installation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge_Code__c</fullName>
        <label>Recurring Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Recurring Charge External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge__c</fullName>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Cost__c</fullName>
        <label>Recurring Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the sorting order for this Add On.</description>
        <inlineHelpText>Indicates the sorting order for this Add On.</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Version_Number__c</fullName>
        <description>The version number of this Add On.</description>
        <inlineHelpText>The version number of this Add On.</inlineHelpText>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Add On</label>
    <listViews>
        <fullName>cspmb__All</fullName>
        <columns>NAME</columns>
        <columns>UPC_TaifunProductElement_Number__c</columns>
        <columns>cspmb__Recurring_Charge__c</columns>
        <columns>cspmb__Account__c</columns>
        <columns>UPC_Addon_Abbreviation__c</columns>
        <columns>cspmb__One_Off_Charge__c</columns>
        <columns>UPC_Add_On_Name_German__c</columns>
        <columns>cspmb__Add_On_Price_Item_Description__c</columns>
        <columns>cspmb__Is_One_Off_Discount_Allowed__c</columns>
        <columns>cspmb__Is_Recurring_Discount_Allowed__c</columns>
        <columns>cspmb__Current_Version__c</columns>
        <columns>cspmb__Version_Number__c</columns>
        <columns>cspmb__Sequence__c</columns>
        <columns>CSCRM_Migration_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Add On Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add Ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>